2023/day-02/src/snapshots/day_two__test__snapshot_game_parse-5.snap
---
source: day-two/src/main.rs
expression: "Game::parse(input_5)"
---
Ok(
    (
        "",
        Game {
            game_num: 5,
            hands: [
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 6,
                            color: Red,
                        },
                        ColorCount {
                            count: 1,
                            color: Blue,
                        },
                        ColorCount {
                            count: 3,
                            color: Green,
                        },
                    ],
                },
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 2,
                            color: Blue,
                        },
                        ColorCount {
                            count: 1,
                            color: Red,
                        },
                        ColorCount {
                            count: 2,
                            color: Green,
                        },
                    ],
                },
            ],
        },
    ),
)
